# job-crawler

./: .gitignore  HANDOVER.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml
Version-A/: .gitignore  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml
Version-A/docs/: deployment.md  vm-setup.sh
Version-A/scraper/: .env.example  README.md
Version-A/scraper/sql/: 001_init.sql
Version-A/scraper/src/: __init__.py  config.py  main.py  models.py
Version-A/scraper/tests/: __init__.py  test_scrapers.py
Version-A/web/: package-lock.json
Version-A/web/src/app/: page.tsx
Version-A/web/src/app/api/jobs/: route.ts
Version-A/web/src/lib/: db.ts
Version-B/: MIGRATION_GUIDE.md  README.md  REQUIREMENTS.md  ROADMAP.md  SPECIFICATIONS.md  USER_STORIES.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
Version-B/scraper/: .env.example  Dockerfile  README.md  pyproject.toml
Version-B/scraper/sql/: 001_v2_init.sql
Version-B/scraper/src/: __init__.py  config.py  database.py  filters.py  main.py  models.py  pipeline.py
Version-B/scraper/src/ai/: limiter.py  service.py
Version-B/scraper/src/scrapers/: base.py  greenhouse.py  strategies.py
Version-B/web/: Dockerfile  package.json
Version-B/web/src/app/: page.tsx
Version-B/web/src/app/api/crawl/: route.ts
Version-B/web/src/app/api/jobs/: route.ts
Version-B/web/src/components/: JobCard.tsx
Version-B/web/src/lib/: db.ts
docs/: deployment.md
scraper/: Dockerfile  README.md  pyproject.toml
scraper/src/: __init__.py  cleanup.py  database.py  digest.py  main.py  notifications.py  scrapers.py  server.py
scraper/src/templates/: digest.html
scraper/tests/: test_database.py
web/: Dockerfile  README.md  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: JobCard.tsx
